fix footer horizontal overflow

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,12 @@
-.container-fluid{
+.footer-container{
     background-color: rgb(59, 59, 59);
     color:white;
-    padding: 30px 0px;
+    padding-top: 30px;
 }
 .footerC{
     padding-left: 30px;
 }
-.container-fluid a{
+.footer-container a{
     color:rgb(226, 205, 205);
 }
 .copyright{
